internal/controller/test_data/basic-atom/expected-output/middleware-downloads.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: basic-atom-downloads-0
  namespace: test
  labels:
    test: test
    app: atom-service
  ownerReferences:
    - apiVersion: pdok.nl/v3
      kind: Atom
      name: basic
      uid: ""
      blockOwnerDeletion: true
      controller: true
spec:
  replacePathRegex:
    regex: ^/path/downloads/(file.ext)
    replacement: /container/prefix/$1
