internal/controller/test_data/basic-atom/expected-output/middleware-headers.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: basic-atom-headers
  namespace: test
  labels:
    test: test
    app: atom-service
  ownerReferences:
    - apiVersion: pdok.nl/v3
      kind: Atom
      name: basic
      uid: ""
      blockOwnerDeletion: true
      controller: true
spec:
  headers:
    customResponseHeaders:
      Access-Control-Allow-Headers: Content-Type
      Access-Control-Allow-Method: GET, OPTIONS, HEAD
      Access-Control-Allow-Origin: "*"
#    contentSecurityPolicy: # TODO
    frameDeny: true
