internal/controller/test_data/basic-atom/expected-output/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: basic-atom
  namespace: test
  labels:
    test: test
    app: atom-service
  ownerReferences:
    - apiVersion: pdok.nl/v3
      kind: Atom
      name: basic
      uid: ""
      blockOwnerDeletion: true
      controller: true
spec:
  ports:
    - name: atom-service
      port: 80
      protocol: TCP
  selector:
    test: test
    app: atom-service
